bugzilla 357657 - updated DD model and now support URI on all bindings